<resources>
    <string name="app_name">Калькулятор</string>
    <string name="plus_button">+</string>
    <string name="clear_last_task_button">C</string>
    <string name="clear_last_char_button">L</string>
    <string name="clear_all_tasks_button">AC</string>
    <string name="divide_button">\u00F7</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="minus_button">-</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="multiply_button">*</string>
    <string name="percent_button">%</string>
    <string name="zero_button">0</string>
    <string name="dot_button">.</string>
    <string name="equal_button">=</string>
    <string name="pi_button">\u03C0</string>
    <string name="e_button">e</string>
    <string name="square_button">^2</string>
    <string name="cube_button">^3</string>
    <string name="random_exponent_button">^x</string>
    <string name="tan_button">tan</string>
    <string name="sin_button">sin</string>
    <string name="cos_button">cos</string>
    <string name="ctg_button">ctg</string>
    <string name="sqrt_button">\u221a</string>
    <string name="degree_switch_button">deg</string>
    <string name="ms_button">MS</string>
    <string name="mr_button">MR</string>
    <string name="mc_button">MC</string>
    <string name="mplus_button">M+</string>
    <string name="mminus_button">M-</string>
    <string name="change_theme">Сменить тему</string>
    <string name="calculate_temperature">Температура</string>
    <string name="down_choose_temperature">Choose</string>
    <string name="temperature_type_from">°C</string>
    <string name="temperature_data_from">0</string>
    <string name="temperature_data_to">32</string>
    <string name="temperature_type_to">°F</string>
    <string name="choose_type">Выберите величину</string>
    <string name="temperature_description_to">Фаренгейт</string>
    <string name="temperature_description_from">Цельсий</string>

    <string-array name="temperature_types">
        <item>Цельсий °C</item>
        <item>Фаренгейт °F</item>
        <item>Кельвин K</item>
        <item>Ранкин °R</item>
        <item>Реомюр °Re</item>
    </string-array>

</resources>
