<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        style="@style/TextView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_layout_height"
        android:layout_weight="1"
        android:scrollbars="vertical" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/table_layout_height"
        android:layout_weight="1"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/clear_all_tasks_buton"
                style="@style/Button"
                android:text="@string/clear_all_tasks_button" />

            <Button
                android:id="@+id/clear_last_task_button"
                style="@style/Button"
                android:text="@string/clear_last_task_button" />

            <ImageButton
                android:id="@+id/clear_last_char_button"
                style="@style/ImageButton"
                android:contentDescription="@string/clear_last_char_button" />

            <Button
                android:id="@+id/divide_button"
                style="@style/Button"
                android:text="@string/divide_button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/seven_button"
                style="@style/Button"
                android:text="@string/seven_button" />

            <Button
                android:id="@+id/eight_button"
                style="@style/Button"
                android:text="@string/eight_button" />

            <Button
                android:id="@+id/nine_button"
                style="@style/Button"
                android:text="@string/nine_button" />

            <Button
                android:id="@+id/multiply_button"
                style="@style/Button"
                android:text="@string/multiply_button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/four_button"
                style="@style/Button"
                android:text="@string/four_button" />

            <Button
                android:id="@+id/five_button"
                style="@style/Button"
                android:text="@string/five_button" />

            <Button
                android:id="@+id/six_button"
                style="@style/Button"
                android:text="@string/six_button" />

            <Button
                android:id="@+id/minus_button"
                style="@style/Button"
                android:text="@string/minus_button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/one_button"
                style="@style/Button"
                android:text="@string/one_button" />

            <Button
                android:id="@+id/two_button"
                style="@style/Button"
                android:text="@string/two_button" />

            <Button
                android:id="@+id/three_button"
                style="@style/Button"
                android:text="@string/three_button" />

            <Button
                android:id="@+id/plus_button"
                style="@style/Button"
                android:text="@string/plus_button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/sqrt_button"
                style="@style/Button"
                android:text="@string/sqrt_button" />

            <Button
                android:id="@+id/zero_button"
                style="@style/Button"
                android:text="@string/zero_button" />

            <Button
                android:id="@+id/dot_button"
                style="@style/Button"
                android:text="@string/dot_button" />

            <Button
                android:id="@+id/equal_button"
                style="@style/Button"
                android:text="@string/equal_button" />
        </TableRow>
    </TableLayout>
</LinearLayout>
